// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiGovTransaction deposits 1`] = `
<li-transaction-stub
  block="56675"
  color="#15CFCC"
  time="1970-01-01T00:00:42.567Z"
>
  <div>
    
      Deposit 
      
    <b>
      100
    </b>
     
    <span>
       stakes
    </span>
  </div>
   
  <div>
    
      On 
      
    <router-link-stub
      to="/proposals/1"
    >
      
        Proposal #1
      
    </router-link-stub>
  </div>
</li-transaction-stub>
`;

exports[`LiGovTransaction proposals 1`] = `
<li-transaction-stub
  block="56673"
  color="#15CFCC"
  time="1970-01-01T00:00:42.540Z"
>
  <div>
    
      Submit text proposal 
      
    <b>
      100
    </b>
     
    <span>
       stakes
    </span>
  </div>
   
  <div>
    
      Title: 
    <i>
      Test Proposal
    </i>
  </div>
</li-transaction-stub>
`;

exports[`LiGovTransaction votes 1`] = `
<li-transaction-stub
  block="56673"
  color="#15CFCC"
  time="1970-01-01T00:00:43.300Z"
>
  <div>
    
      Vote Yes
      
    <!---->
  </div>
   
  <div>
    
      On 
      
    <router-link-stub
      to="/proposals/1"
    >
      
        Proposal #1
      
    </router-link-stub>
  </div>
</li-transaction-stub>
`;
